--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@ body {
 h1
 {
 	color:#ffffff;
-	font-family:Adobe Caslan Pro;
+	font-family:Candara;
 	 font-style: italic;
 	 font-size: 100px;
 }
@@ -163,8 +163,8 @@ h1
 <div class="responsive" style="width:280px;margin:0 auto position:relative">
   <div class="img">
    <div class="hovereffect">
-<a href="main.html?a=bag">
-    <img border="0" alt="Bag" src="/home/saumya/InnovAccer/FashionAnalytics/templates/Images/bags.jpg" width="450" height="200" class="img-responsive" align="centre" >
+<a href="/product/bags">
+    <img border="0" alt="Bags" src="/img/bags.jpg" width="450" height="200" class="img-responsive" align="centre" >
 </a>
 </div>
 </div>
@@ -173,8 +173,9 @@ h1
 <div class="responsive" style="width:280px;margin:0 auto">
   <div class="img">
    <div class="hovereffect">
-<a href="main.html?a=belt">
-    <img border="0" alt="belt" src="Images/belt.jpg" width="600" height="400" class="img-responsive" align="centre">
+<a href="/product/belts">
+
+    <img border="0" alt="Belts" src="/img/belt.jpg" width="600" height="400" class="img-responsive" align="centre">
 </a>
 </div>
 </div>
@@ -183,8 +184,8 @@ h1
 <div class="responsive" style="width:280px;margin:0 auto">
   <div class="img">
    <div class="hovereffect">
-<a href="main.html?a=sunglasses">
-    <img border="0" alt="sunglasses" src="/home/saumya/InnovAccer/FashionAnalytics/templates/Images/sunglasses.jpg" width="600" height="400" class="img-responsive" align="centre">
+<a href="/product/sunglasses">
+    <img border="0" alt="Sunglasses" src="/img/sunglasses.jpg" width="600" height="400" class="img-responsive" align="centre">
 </a>
 </div>
 </div>
@@ -193,8 +194,8 @@ h1
 <div class="responsive" style="width:289px;margin:0 auto">
   <div class="img">
    <div class="hovereffect">
-<a href="main.html?a=lipstick">
-    <img border="0" alt="lipstick" src="/home/saumya/InnovAccer/FashionAnalytics/templates/Images/lipstick.jpg" width="600" height="400" class="img-responsive" align="centre">
+<a href="/product/lipsticks">
+    <img border="0" alt="Lipsticks" src="/img/lipstick.jpg" width="600" height="400" class="img-responsive" align="centre">
 </a>
 </div>
 </div>
@@ -202,3 +203,5 @@ h1
 </div>
 </div>
 </center>
+</body>
+</html>
