--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
    <body>
+<h1>output</h1>
 
       <table border = 1>
          {% for key, value in result.iteritems() %}
@@ -11,7 +12,7 @@
             </tr>
 
          {% endfor %}
-      </table>
+     </table>
 
    </body>
 </html>
